Closed Bug 1200614 Opened 9 years ago Closed 9 years ago

Intermittent test_peerConnection_twoAudioVideoStreamsCombined.html | application crashed [@ mozilla::media::LambdaRunnable<mozilla::camera::CamerasParent::RecvStopCapture(const int&, const int&)::<lambda()> >::Run]

Categories

(Core :: WebRTC, defect, P2)

Unspecified
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
firefox43 --- fixed

People

(Reporter: RyanVM, Unassigned)

References

Details

(Keywords: crash, intermittent-failure)

Attachments

(2 files)

      No description provided.
This seems to be in your new code. Can you take a look?
backlog: --- → webrtc/webaudio+
Rank: 25
Flags: needinfo?(gpascutto)
Priority: -- → P2
Attachment #8655974 - Flags: review?(rjesup) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/b45b4b3f1ed5e7df24e62551e6a5e9fdd5c1acc9
Bug 1200614 - Protect the capture engines array from concurrent access (during shutdown). r=jesup
This needs an actual null check too. Followup patch incoming.
Flags: needinfo?(gpascutto)
Keywords: leave-open
Attachment #8656558 - Flags: review?(rjesup) → review+
https://hg.mozilla.org/mozilla-central/rev/61ae725b23ee
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: