Bug 1200614 - Protect the capture engines array from concurrent access (during shutdown). r=jesup